fix: check if an API is synchronized during migration
For an API, if the definition version in db is different from the deployed, the API must be considered as out of sync.

This appends during migration V2 -> V4 or rollback of this