@@ -434,7 +434,7 @@ public class ApiStateServiceImpl implements ApiStateService {
 
             if (!events.isEmpty()) {
                 // According to page size, we know that we have only one element in the list
-                Event lastEvent = events.get(0);
+                Event lastEvent = events.getFirst();
                 boolean sync = false;
                 if (
                     io.gravitee.repository.management.model.EventType.PUBLISH_API.equals(lastEvent.getType()) ||
@@ -442,6 +442,9 @@ public class ApiStateServiceImpl implements ApiStateService {
                     io.gravitee.repository.management.model.EventType.STOP_API.equals(lastEvent.getType())
                 ) {
                     Api payloadEntity = objectMapper.readValue(lastEvent.getPayload(), Api.class);
+                    if (genericApiEntity.getDefinitionVersion() != payloadEntity.getDefinitionVersion()) {
+                        return false;
+                    }
 
                     if (
                         genericApiEntity.getDefinitionVersion() == DefinitionVersion.V2 ||
